<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Firebase Login</string>

    <string name="login_title">Entrar</string>
    <string name="login_subtitle">Acesse sua conta para continuar</string>
    <string name="register_title">Criar conta</string>
    <string name="register_subtitle">Preencha os dados abaixo</string>

    <string name="hint_full_name">Nome completo</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar senha</string>

    <string name="action_login">Entrar</string>
    <string name="action_register">Cadastrar</string>
    <string name="action_logout">Sair</string>

    <string name="link_to_register">Não tem conta? Cadastre-se</string>
    <string name="link_to_login">Já tem conta? Faça login</string>

    <string name="welcome">Bem-vindo!</string>
    <string name="welcome_user">Bem-vindo, %1$s!</string>

</resources>